docker/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typespeed-app
  labels:
    app: typespeed-app
spec:
  selector:
    app: typespeed-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
